--- a/src/index.html
+++ b/src/index.html
@@ -1,63 +1,15 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>allworld.com</title>
-  <!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="utf-8" />
-	<meta name="viewport"
-		content="width=device-width, initial-scale=1" />
-
-	<link
-	rel="stylesheet"
-	href=
-"https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
-
-	<script src=
-"https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
-	</script>
-	<script src=
-"https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js">
-	</script>
-	<script src=
-"https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js">
-	</script>
+  <meta charset="utf-8">
+  <title>AngularFrontend</title>
+  <base href="/">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" 
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-	<a class="navbar-brand" href="#">Allworld</a>
-
-	<div class="collapse navbar-collapse">
-		<ul class="navbar-nav mr-auto">
-		<li class="nav-item active">
-			<a class="nav-link" href="https://myapp.tcs.com/logon/LogonPoint/tmindex.html">TimeSheet</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link" href="#">Daily tasks</a>
-		</li>
-        <li class="nav-item active">
-			<a class="nav-link" href="https:/google.com">mandatory courses</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link" href="#">vacancies</a>
-		</li>
-        <li class="nav-item active">
-			<a class="nav-link" href="/src/app/app.component.html">feedback</a>
-		</li>
-		</ul>
-		<form class="form-inline my-2 my-lg-0">
-		<input
-			class="form-control mr-sm-2"
-			type="search"
-			placeholder="Search"
-			aria-label="Search"/>
-		<button class="btn btn-light my-2 my-sm-0"
-				type="submit">
-			Search
-		</button>
-		</form>
-	</div>
-	</nav>
-<img src="https://mdbootstrap.com/img/new/slides/041.webp" class="img-fluid" alt="..." />
+  <app-root></app-root>
+</body>
 </html>
